
2009-11-12 tdb
 * Added subclasses for EPrints::XML to support class-overrides
 * Added "ref" option to phrases, which will caused the referenced phrase to be used instead

2009-11-12 cjg
 * Fix to make button forms work with https.

2009-11-12 cjg
 * Better error message if repository is not loaded in /bin/ scripts.

2009-11-12 cjg
 * Built a method in Rewrite which takes a list of plugins and a HTTP
    accept header and returns the best plugin for that header!
 * Export plugins have a quality value, defaulting to qs=0.5
 * URIs now perform a content negotiation redirect! 

2009-11-13 cjg
 * Improved document_upload.pl layout to make it easier to add/remove 
    suffix to mimetype mappings.

2009-11-13 cjg
 * Added support for Linked data. Yes, you heard me: Linked Data!

2009-11-13 cjg
 * Corrected deprecated call in EPrints::Apache::ReWrite (introduced last commit)

2009-11-13 cjg
 * Added URI to EPrint Summary Page

2009-11-15 cjg
 * If no "accept" header then assume text/html
 * Renamed _update_triggers to update_triggers (prelude from moving it to DataObj.pm)
 * Added RDF-N3 Export tool.
 * Tweaks to bibo module to handle events better

2009-11-16 cjg
 * Removed unused dependency on Unicode::String from RDFN3

2009-11-16 cjg
 * Added code to RDF .pl files to check fields exist.

2009-11-16 cjg 
 * Added test to make sure rdf functions exist before calling them
 * Added fix for unicode in values used to md5hash RDF URI values
 * Moved all dataobj warning, validate and change-trigger code to DataObj
    as a prelude to adding sets of triggers.

2009-11-19 tdb
 * Offer options to users and editors on the deposit screen if there are
    problems
 * Made it an option to provide action buttons top and bottom in workflow
 * Display a warning only if eprint is locked by someone else in workflow
 * Removed box around action buttons and blister bar in workflow
 * Document upload screen now has tabs

2009-11-19 cjg
 * Fixed URI redirections to be 303 not 302.